--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
+    "@neondatabase/serverless": "^0.10.4",
     "@phosphor-icons/react": "^2.1.7",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -23,6 +24,9 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tanstack/react-query": "^5.66.11",
+    "@upstash/redis": "^1.34.4",
+    "@vercel/blob": "^0.27.2",
+    "@vercel/edge-config": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
