--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
   "version": 2,
-  "buildCommand": "prisma generate && next build",
-  "installCommand": "pnpm install --no-frozen-lockfile",
+  "installCommand": "npm install --force",
+  "buildCommand": "prisma generate && npm run build",
+  "framework": "nextjs",
   "outputDirectory": ".next",
-  "builds": [
-    { "src": "package.json", "use": "@vercel/next" }
-  ],
   "env": {
     "NEXTAUTH_URL": "${NEXTAUTH_URL}",
     "NEXTAUTH_SECRET": "${NEXTAUTH_SECRET}",
