--- a/package.json
+++ b/package.json
@@ -35,23 +35,24 @@
     "next": "15.2.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "prisma": "^6.4.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.0.9",
     "typescript": "^5"
   }
 }
